--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ p {
     margin-bottom: 25px;
 }
 
+.circles { 
+    display: none;
+}
+
 @media only screen and (min-width: 768px) {
     .nav { 
         display: flex; 
@@ -92,40 +96,44 @@ p {
 
     .main { 
         padding-bottom: 150px;
-        width: 65%;
+        width: 60%;
     }
 
     .circles { 
-        float: left;
+        display: flex;
+        flex-direction: wrap;
     }
 
     .circle-l { 
-        float: left;
         height: 275px;
         width: 275px;
         border-radius: 50%;
-        background-color: rgba(247, 136, 167, 0.6);
-        transform: translate(70%, 0%);
+        background-color: rgba(247, 136, 167, 0.6); 
+        /* transform: translate(100%, 0%); */
+        position: absolute;
+        right: 130px;
     }
 
     .circle-m { 
-        float: left;
         height: 225px;
         width: 225px;
         border-radius: 50%;
         background-color: rgba(247, 193, 162, 0.7);
-        transform: translate(20%, 85%);
-        position: static;
+        /* transform: translate(60%, 80%); */
+        position: absolute; 
+        top: 325px;
+        right: 50px;
     }
 
     .circle-s { 
-        float: left;
-        height: 175px; 
-        width: 175px;
+        height: 150px; 
+        width: 150px;
         border-radius: 50%;
         background-color: rgba(207, 130, 213, 0.6);
-        transform: translate(70%, -85%);
-        position: static;
+       /* transform: translate(0%, 35%); */
+        position: absolute;
+        top: 225px;
+        right: 30px;
     }
 
 }
